--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learn-react",
   "version": "0.1.0",
-  "homepage": "https://Shaariq06.github.io/Learn-React2",
+  "homepage": "https://Shaariq06.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
